objects/PickListDisplay__c.object
<CustomObject>
    <fields>
        <fullName>FreeText__c</fullName>
        <label>FreeText</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>PickListDisplay</label>
    <nameField>
        <label>PickListDisplay Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PickListDisplays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Free_text_validate</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ispickval(Option__c,&apos;Other&apos;),isblank(FreeText__c))</errorConditionFormula>
        <errorDisplayField>FreeText__c</errorDisplayField>
        <errorMessage>Please enter the Free text value</errorMessage>
    </validationRules>
</CustomObject>